--- a/class_project _class/Areas/Admin/Views/Covertype/Index.cshtml
+++ b/class_project _class/Areas/Admin/Views/Covertype/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿<div class="row">
     <div class="col-9">
-        <h2>CategoryList</h2>
+        <h2>CovertypeList</h2>
     </div>
     <div class="col-3">
         <a asp-action="upsert" class="btn btn-info ">
-            <i class="fas fa-plus"></i>&nbsp; category
+            <i class="fas fa-plus"></i>&nbsp; Covertype
         </a>
 
     </div>
