--- a/class_project _class/Views/Shared/_Layout.cshtml
+++ b/class_project _class/Views/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="Admin" asp-controller="Covertype" asp-action="Index">Category</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
