--- a/class_project _class/Views/Shared/_Layout.cshtml
+++ b/class_project _class/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                             <a class="nav-link text-white" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="Admin" asp-controller="Covertype" asp-action="Index">Category</a>
+                            <a class="nav-link text-white" asp-area="Admin" asp-controller="Covertype" asp-action="Index">CoverType</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
