--- a/class_project _class/Views/Shared/_Layout.cshtml
+++ b/class_project _class/Views/Shared/_Layout.cshtml
@@ -30,11 +30,25 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        <li class="nav-item">
+                       @*  <li class="nav-item">
                             <a class="nav-link text-white" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="Admin" asp-controller="Covertype" asp-action="Index">CoverType</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a>
+                        </li> *@
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-white " data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Content Management</a>
+                            <div class="dropdown-menu">
+                                @*  <a class="dropdown-item" href="#">Action</a>*@
+
+                                <a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
+                                <a class="dropdown-item" asp-area="Admin" asp-controller="Covertype" asp-action="Index">CoverType</a>
+                                <a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a>
+
+                            </div>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
