--- a/class_project _class/Areas/Admin/Views/Product/upsert.cshtml
+++ b/class_project _class/Areas/Admin/Views/Product/upsert.cshtml
@@ -1,150 +1,176 @@
 ﻿@model Project_model.ViewModels.ProductVM
 @{
-    ViewData["Title"] = "upsert";
-    var title = Model.Product.Id != 0 ? "Edit Product" : "New Product";
+    var title = Model.Product.Id != 0 ? "Edit" : "New";
 }
-
-
-
 <div class="row">
-    <h2 class="text-primary">@title</h2>
+    <h2 class="text-success fw-bold">@title</h2>
 </div>
 <div class="row">
-    <div class="col-md-6">
-        <div class="col-6">
-            <form method="post" enctype="multipart/form-data">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                @if (Model.Product.Id != 0)
-                {
-                    <input type="hidden" asp-for="@Model.Product.Id">
-
-                }
-                <div class="form-group">
+    <div class="offset-md-1 col-md-4">
+        <form method="post" enctype="multipart/form-data">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            @if (Model.Product.Id != 0)
+            {
+                <input type="hidden" asp-for="@Model.Product.Id" />
+            }
+            <div class="form-group row p-2">
+                <div class="col-md-3">
                     <label asp-for="Product.Title"></label>
+                </div>
+                <div class="col">
                     <input asp-for="Product.Title" class="form-control" />
                     <span asp-validation-for="Product.Title" class="text-danger"></span>
                 </div>
-
-                <div class="form-group">
-                    <label asp-for="Product.ISBN"></label>
-                    <input asp-for="Product.ISBN" class="form-control" />
-                    <span asp-validation-for="Product.ISBN" class="text-danger"></span>
-                </div>
-                <div class="form-group">
+            </div>
+            <div class="form-group row p-2">
+                <div class="col-md-3">
                     <label asp-for="Product.Author"></label>
+                </div>
+                <div class="col">
                     <input asp-for="Product.Author" class="form-control" />
                     <span asp-validation-for="Product.Author" class="text-danger"></span>
                 </div>
-                <div class="form-group">
+            </div>
+            <div class="form-group row p-2 ">
+                <div class="col-md-3">
+                    <label asp-for="Product.ISBN"></label>
+                </div>
+                <div class="col">
+                    <input asp-for="Product.ISBN" class="form-control" />
+                    <span asp-validation-for="Product.ISBN" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group row p-2">
+                <div class="col-md-3">
                     <label asp-for="Product.Description"></label>
+                </div>
+                <div class="col">
                     <textarea asp-for="Product.Description" class="form-control"></textarea>
                     <span asp-validation-for="Product.Description" class="text-danger"></span>
                 </div>
-                <div class="form-group">
+            </div>
+            <div class="form-group row p-2">
+                <div class="col-md-3">
                     <label asp-for="Product.ListPrice"></label>
+                </div>
+                <div class="col">
                     <input asp-for="Product.ListPrice" class="form-control" />
                     <span asp-validation-for="Product.ListPrice" class="text-danger"></span>
                 </div>
-                <div class="form-group">
+            </div>
+            <div class="form-group row p-2">
+                <div class="col-md-3">
                     <label asp-for="Product.Price"></label>
+                </div>
+                <div class="col">
                     <input asp-for="Product.Price" class="form-control" />
                     <span asp-validation-for="Product.Price" class="text-danger"></span>
                 </div>
-                <div class="form-group">
-                    <label asp-for="Product.Prdqty"></label>
-                    <input asp-for="Product.Prdqty" class="form-control" />
-                    <span asp-validation-for="Product.Prdqty" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Product.Price50"></label>
-                    <input asp-for="Product.Price50" class="form-control" />
-                    <span asp-validation-for="Product.Price50" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Product.Price100"></label>
-                    <input asp-for="Product.Price100" class="form-control" />
-                    <span asp-validation-for="Product.Price100" class="text-danger"></span>
-                </div>
-                <div class="form-group">
+            </div>
+            <div class="form-group row p-2">
+                <div class="col-md-3">
                     <label asp-for="Product.publisher"></label>
+                </div>
+                <div class="col">
                     <input asp-for="Product.publisher" class="form-control" />
                     <span asp-validation-for="Product.publisher" class="text-danger"></span>
                 </div>
-                <div class="form-group">
-                    <label asp-for="Product.catagoryId"></label>
-                    @* <input asp-for="Product.catagoryId" class="form-control" />*@
-                    @Html.DropDownListFor(m=>m.Product.catagoryId,Model.catalist,"Select category",new{@class="form-control"})
-                    <span asp-validation-for="Product.catagoryId" class="text-danger"></span>
+            </div>
+            <div class="form-group row p-2">
+                <div class="col-md-3">
+                    <label asp-for="Product.Price50"></label>
                 </div>
-                <div class="form-group">
-                    <label asp-for="Product.CovertypeId"></label>
-                    @* <input asp-for="Product.CovertypeId" class="form-control" />*@
-                    @Html.DropDownListFor(m=>m.Product.CovertypeId,Model.covertypeList,"Select covertype",new{@class="form-control"})
+                <div class="col">
+                    <input asp-for="Product.Price50" class="form-control" />
+                    <span asp-validation-for="Product.Price50" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group row p-2">
+                <div class="col-md-3">
+                    <label asp-for="Product.Price100"></label>
+                </div>
+                <div class="col">
+                    <input asp-for="Product.Price100" class="form-control" />
+                    <span asp-validation-for="Product.Price100" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group row p-2">
+                <div class="col-md-3">
+                    <label asp-for="Product.CategoryId"></label>
+                </div>
+                <div class="col">
+                    @Html.DropDownListFor(m => Model.Product.CategoryId, Model.CategoryList, "Select Category", new { @class = "form-control" })
+                    <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group row p-2">
+                <div class="col-md-3">
+                    <label asp-for="Product.CategoryId"></label>
+                </div>
+                <div class="col">
+                    @Html.DropDownListFor(m => Model.Product.CovertypeId, Model.covertypeList, "select Cover Type", new { @class = "form-control" })
                     <span asp-validation-for="Product.CovertypeId" class="text-danger"></span>
                 </div>
 
-                @* <div class="form-group">
-                <label asp-for="Product.CountryId"></label>
-                @* <input asp-for="Product.CovertypeId" class="form-control" />*@
-                @*  @Html.DropDownListFor(m=>m.Product.CountryId,Model.CountryList,"Select covertype",new{@class="form-control"})
-                <span asp-validation-for="Product.catagoryId" class="text-danger"></span>
-                </div> *@
-                <div class="form-group">
+            </div>
+            <div class="form-group row p-2">
+                <div class="col-md-3">
                     <label asp-for="Product.ImgeUrl"></label>
-                    <input type="file" name="Files" id="uploadBox" multiple class="from-control" />
                 </div>
-                <div class="form-group p-2 m-3">
-                    @if (Model.Product.Id != 0)
-                    {
-                        <partial name="Edit" />
-                    }
-                    else
-                    {
-                        <div class="row">
-                            <div class="col">
-                                <button type="submit" onclick="return Valdata()" class="btn btn-success form-control">SAVE</button>
-                            </div>
-                            <div>
-                                <a asp-action="Index" class="btn btn-info form-control">
-                                    Back to List
-                                </a>
-                            </div>
+                <div class="col">
+                    <input type="file" name="files" id="uploadBox" class="form-control" />
+                </div>
+
+            </div>
+            <div class=" form-group row p-2 m-2">
+                @if (Model.Product.Id == 0)
+                {
+                    @*<partial name="_CreateAndBackToListButton" />*@
+                    <div class="row offset-md-3">
+                        <div class="col">
+                            <button type="submit" class="btn btn-success form-control" onclick="return ValData()">
+                                Save
+                            </button>
                         </div>
-                    }
-                </div>
-
-
-
-            </form>
-
-        </div>
+                        <div class="col">
+                            <a asp-action="Index" class="btn btn-success form-control">Back To List</a>
+                        </div>
+                    </div>
+                }
+                else
+                {
+                    <partial name="_UpdateAndBackToListButton" />
+                }
+            </div>
+        </form>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-5">
         @if (Model.Product.Id != 0)
         {
-            <img src="@Model.Product.ImgeUrl" />
+            <img src="@Model.Product.ImgeUrl" class="rounded-bottom" width="100" height="100" />
         }
+
     </div>
-
 </div>
-
-@section Scripts
-    {
+@section Scripts{
     <partial name="_ValidationScriptsPartial" />
-    <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+    <script src="https://cdn.tiny.cloud/1/yceb7wqr2ps5v3vunieemb9syejgjl73j210uk6duakmo75e/tinymce/5/tinymce.min.js"></script>
     <script>
         tinymce.init({
             selector: "textarea",
             plugins: "lists",
             menubar: "file edit format"
+
         })
-        function Valdata()
-        {
-            if (document.getElementById('uploadBox').value == "") 
-            {
-                swal("Error","Pl select Imager","error");
+        function ValData() {
+            if (document.getElementById("uploadBox").value == "") {
+                swal("Error", "Please Select Image", "error");
                 return false;
             }
+
         }
     </script>
+
 }
+
+
