Product_Home_save_product_JS

--- a/class_project _class/Areas/Admin/Views/Product/Index.cshtml
+++ b/class_project _class/Areas/Admin/Views/Product/Index.cshtml
@@ -6,17 +6,16 @@
         <a asp-action="upsert" class="btn btn-info ">
             <i class="fas fa-plus"></i>&nbsp; Product
         </a>
-
     </div>
-
 </div>
+
 <div class="border m-2 p-2">
-    <table id="tblData" class="table  table-bordered table-striped table-active">
+    <table id="tblData" class="table table-bordered table-striped table-active">
         <thead>
             <tr>
                 <th>Title</th>
                 <th>Description</th>
-                <th>Author</th>
+                <th>Authors</th>
                 <th>ISBN</th>
                 <th>Price</th>
                 <th>Action</th>
@@ -24,7 +23,9 @@
         </thead>
     </table>
 </div>
-@* @section scripts
+
+@section scripts
     {
-    <script src="~/js/product.js"></script>
-} *@
+    <script src="~/js/java.js"></script>
+  
+}
