--- a/class_project _class/Areas/Admin/Views/Product/upsert.cshtml
+++ b/class_project _class/Areas/Admin/Views/Product/upsert.cshtml
@@ -130,7 +130,7 @@
                 }
                 else
                 {
-                    <partial name="_UpdateAndBackToListButton" />
+                    <partial name="Edit" />
                 }
             </div>
         </form>
