--- a/class_project _class/Areas/Identity/Pages/Account/Register.cshtml
+++ b/class_project _class/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
 @model RegisterModel
+@using Projrct_unite
 @{
     ViewData["Title"] = "Register";
 }
@@ -12,6 +13,37 @@
             <h2>Create a new account.</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-floating">
+                <input asp-for="Input.Name" class="form-control" autocomplete="username" aria-required="true" />
+                <label asp-for="Input.Name"></label>
+                <span asp-validation-for="Input.Name" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
+                <input asp-for="Input.streetaddress" class="form-control" autocomplete="username" aria-required="true" />
+                <label asp-for="Input.streetaddress"></label>
+                <span asp-validation-for="Input.streetaddress" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.city"></label>
+                <input asp-for="Input.city" class="form-control" />
+                <span asp-validation-for="Input.city" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.state"></label>
+                <input asp-for="Input.state" class="form-control" />
+                <span asp-validation-for="Input.state" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Postalcode"></label>
+                <input asp-for="Input.Postalcode" class="form-control" />
+                <span asp-validation-for="Input.Postalcode " class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.phoneno"></label>
+                <input asp-for="Input.phoneno" class="form-control" />
+                <span asp-validation-for="Input.phoneno" class="text-danger"></span>
+            </div>
+          
             <div class="form-floating">
                 <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
                 <label asp-for="Input.Email"></label>
@@ -27,6 +59,20 @@
                 <label asp-for="Input.ConfirmPassword"></label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+            @if (User.IsInRole(SD.Role_Admin))
+            {
+
+                <div class="form-group">
+                    <label asp-for="Input.CompanyId"></label>
+                    @Html.DropDownListFor(m => m.Input.CompanyId, Model.Input.companyLIst, "Select Company ", new { @class = "form-control" })
+                    <span asp-validation-for="Input.CompanyId" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Input.Role"></label>
+                    @Html.DropDownListFor(m => m.Input.Role, Model.Input.RolEist, "Select Role", new { @class = "form-control" })
+                    <span asp-validation-for="Input.Role" class="text-danger"></span>
+                </div>
+            }
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
     </div>
