--- a/class_project _class/Areas/Identity/Pages/Account/Register.cshtml
+++ b/class_project _class/Areas/Identity/Pages/Account/Register.cshtml
@@ -24,22 +24,26 @@
                 <span asp-validation-for="Input.streetaddress" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.city"></label>
+                <input asp-for="Input.city" class="form-control" autocomplete="username" aria-required="true" />
+                
                 <input asp-for="Input.city" class="form-control" />
                 <span asp-validation-for="Input.city" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.state"></label>
+                <input asp-for="Input.state" class="form-control" autocomplete="username" aria-required="true" />
+       
                 <input asp-for="Input.state" class="form-control" />
                 <span asp-validation-for="Input.state" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.Postalcode"></label>
+                <input asp-for="Input.Postalcode" class="form-control" autocomplete="username" aria-required="true" />
+             
                 <input asp-for="Input.Postalcode" class="form-control" />
                 <span asp-validation-for="Input.Postalcode " class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.phoneno"></label>
+
+                <input asp-for="Input.phoneno" class="form-control" autocomplete="username" aria-required="true" />
                 <input asp-for="Input.phoneno" class="form-control" />
                 <span asp-validation-for="Input.phoneno" class="text-danger"></span>
             </div>
