--- a/class_project _class/Views/Shared/_Layout.cshtml
+++ b/class_project _class/Views/Shared/_Layout.cshtml
@@ -44,6 +44,8 @@
                             <div class="dropdown-menu">
                                 @*  <a class="dropdown-item" href="#">Action</a>*@
 
+                                <a class="dropdown-item" asp-area="Admin" asp-controller="Company" asp-action="Index">CompanyList</a>
+
                                 <a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
                                 <a class="dropdown-item" asp-area="Admin" asp-controller="Covertype" asp-action="Index">CoverType</a>
                                 <a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a>
