--- a/class_project _class/Areas/Identity/Pages/Account/Register.cshtml
+++ b/class_project _class/Areas/Identity/Pages/Account/Register.cshtml
@@ -13,54 +13,62 @@
             <h2>Create a new account.</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-floating">
-                <input asp-for="Input.Name" class="form-control" autocomplete="username" aria-required="true" />
+            <div class="form-group">
                 <label asp-for="Input.Name"></label>
+                <input asp-for="Input.Name" class="form-control" autocomplete="username" aria-required="true" />
+            
                 <span asp-validation-for="Input.Name" class="text-danger"></span>
             </div>
-            <div class="form-floating">
-                <input asp-for="Input.streetaddress" class="form-control" autocomplete="username" aria-required="true" />
+            <div class="form-group">
                 <label asp-for="Input.streetaddress"></label>
+                <input asp-for="Input.streetaddress" class="form-control" autocomplete="username" aria-required="true" />
+               
                 <span asp-validation-for="Input.streetaddress" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Input.city"></label>
                 <input asp-for="Input.city" class="form-control" autocomplete="username" aria-required="true" />
+               
                 
-                <input asp-for="Input.city" class="form-control" />
                 <span asp-validation-for="Input.city" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Input.state"></label>
                 <input asp-for="Input.state" class="form-control" autocomplete="username" aria-required="true" />
-       
-                <input asp-for="Input.state" class="form-control" />
+              
+
                 <span asp-validation-for="Input.state" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Input.Postalcode"></label>
                 <input asp-for="Input.Postalcode" class="form-control" autocomplete="username" aria-required="true" />
-             
-                <input asp-for="Input.Postalcode" class="form-control" />
+          
+                
                 <span asp-validation-for="Input.Postalcode " class="text-danger"></span>
             </div>
             <div class="form-group">
-
+                <label asp-for="Input.phoneno"></label>
                 <input asp-for="Input.phoneno" class="form-control" autocomplete="username" aria-required="true" />
-                <input asp-for="Input.phoneno" class="form-control" />
+       
                 <span asp-validation-for="Input.phoneno" class="text-danger"></span>
             </div>
-          
-            <div class="form-floating">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
+
+            <div class="form-group">
                 <label asp-for="Input.Email"></label>
+                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
+               
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <div class="form-floating">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
+            <div class="form-group">
                 <label asp-for="Input.Password"></label>
+                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
+              
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
-            <div class="form-floating">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
+            <div class="form-group">
                 <label asp-for="Input.ConfirmPassword"></label>
+                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
+                
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
             @if (User.IsInRole(SD.Role_Admin))
