--- a/class_project _class/Views/Shared/_Layout.cshtml
+++ b/class_project _class/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@using Projrct_unite
+
+
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -10,7 +14,8 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
-
+    
+     
 
 </head>
 <body>
@@ -39,19 +44,37 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a>
                         </li> *@
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-white " data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Content Management</a>
-                            <div class="dropdown-menu">
-                                @*  <a class="dropdown-item" href="#">Action</a>*@
+                        @if (User.IsInRole(SD.Role_Admin))
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle text-white " data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Content Management</a>
+                                <div class="dropdown-menu">
+                                    @*  <a class="dropdown-item" href="#">Action</a>*@
 
-                                <a class="dropdown-item" asp-area="Admin" asp-controller="Company" asp-action="Index">CompanyList</a>
-                                <a class="dropdown-item" asp-area="Admin" asp-controller="User" asp-action="Index">User List</a>
-                                <a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
-                                <a class="dropdown-item" asp-area="Admin" asp-controller="Covertype" asp-action="Index">CoverType</a>
-                                <a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a>
+                                  @*   <a class="dropdown-item" asp-area="Admin" asp-controller="Company" asp-action="Index">CompanyList</a>
+                                    <a class="dropdown-item" asp-area="Admin" asp-controller="User" asp-action="Index">User List</a> *@
+                                    <a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
+                                    <a class="dropdown-item" asp-area="Admin" asp-controller="Covertype" asp-action="Index">CoverType</a>
+                                    <a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a>
 
-                            </div>
-                        </li>
+                                </div>
+                            </li>
+                        }
+                        @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle text-white" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Company/User </a>
+                                <div class="dropdown-menu">
+
+
+                                    <a class="dropdown-item" asp-area="Admin" asp-controller="Company" asp-action="Index">CompanyList</a>
+                                    <a class="dropdown-item" asp-area="Admin" asp-controller="user" asp-action="Index">userList</a>
+                                    @*  <a class="dropdown-item" asp-area="customer" asp-controller="Home" asp-action="Allorder">orderList</a>
+ *@
+
+                                </div>
+                            </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
